Fixed nav bar on smaller mobile devices

--- a/src/styles/component/f1-prediction-game.module.scss
+++ b/src/styles/component/f1-prediction-game.module.scss
@@ -15,6 +15,7 @@
 .navCon {
   width: 100%;
   background-color: white;
+  overflow-x: auto;
 }
 .navBar {
   width: 100%;
